@@ -67,8 +67,8 @@ struct CmdLineOptions
     numExtraFlags(0), teamKillerKickRatio(0),
     numAllowedFlags(0), shakeWins(0), shakeTimeout(0),
     teamFlagTimeout(30), maxlagwarn(10000), maxjitterwarn(1000),
-    lagwarnthresh(-1.0), jitterwarnthresh(-1.1),
-    idlekickthresh(-1.0), timeLimit(0.0f), timeElapsed(0.0f), addedTime(0.0f),
+    lagwarnthresh(-1.0f), jitterwarnthresh(-1.1f),
+    idlekickthresh(-1.0f), timeLimit(0.0f), timeElapsed(0.0f), addedTime(0.0f),
     useGivenPort(false),
     useFallbackPort(false), requireUDP(false), randomBoxes(false),
     randomCTF(false), flagsOnBuildings(false), respawnOnBuildings(false),
