@@ -4,6 +4,7 @@
 BZFlag 2.1.0
 ------------
 
+* Automatic prompting, download and installation of updates - Daniel Remenak
 * Append screenshots after the highest numbered existing one - Ian Agar
 * Add /modcount to adjust countdown time from within game - Ian Agar
 * Fix wrong kick if pausing having V and moving - Julio Jimenez
